Set Origin to center of mass has to be performed several times #65986

Closed
opened 2019-06-21 09:24:19 +02:00 by Robert S · 9 comments

System Information
Operating system: Windows 10
Graphics card: 1080

Blender Version
Broken: 2019-06-16 12da679fa0
Worked: (optional)

Short description of error
In the Object menu, the command "Origin to center of mass (volume)" needs to be activated several times in order to have the origin actually end up at the center of all objects.

Exact steps for others to reproduce the error

  1. Open attached file
  2. Select all
  3. Perform "Origin to center of mass (volume)"

Result:
Note how in certain objects, the origin is still outside of the object (and note how it creeps closer on repeated activations; certain objects need several).

Expected result:
The result should perform the correct calculation at the first activation. Subsequent repeats should not be necessary.

1.FBX

**System Information** Operating system: Windows 10 Graphics card: 1080 **Blender Version** Broken: 2019-06-16 12da679fa094 Worked: (optional) **Short description of error** In the Object menu, the command "Origin to center of mass (volume)" needs to be activated several times in order to have the origin actually end up at the center of all objects. **Exact steps for others to reproduce the error** 1. Open attached file 2. Select all 3. Perform "Origin to center of mass (volume)" Result: Note how in certain objects, the origin is still outside of the object (and note how it creeps closer on repeated activations; certain objects need several). Expected result: The result should perform the correct calculation at the first activation. Subsequent repeats should not be necessary. [1.FBX](https://archive.blender.org/developer/F7427054/1.FBX)
Author

Added subscriber: @RobertS

Added subscriber: @RobertS
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Confirmed at first sight, seems to be the case if origin is far off in relation to geometry bounds (possibly precission issue?), Origin to Geometry or Origin to center of mass (surface) dont seem to suffer the same issues, checking...

Confirmed at first sight, seems to be the case if origin is far off in relation to geometry bounds (possibly precission issue?), `Origin to Geometry` or `Origin to center of mass (surface)` dont seem to suffer the same issues, checking...
Member

simpler testcase:
T65986_simple.blend

simpler testcase: [T65986_simple.blend](https://archive.blender.org/developer/F7427642/T65986_simple.blend)
Member

We have two "competing" methods here:

  • Origin to center of mass (volume) was introduced in 37bc3850ce
  • it was soon found that there can be issues with this, so the Origin to center of mass (surface) was brought back 361c7cbbc5
  • so in the end this might not be a bug, Origin to center of mass (surface) will always work fine here... [this is the suggested workaround for now...]

Comments suggest the volume based method has following issues:

The new method while improved for solid objects doesn't work for non-manifold meshes, keep both
The resulting volume will only be correct if the mesh is manifold and has consistent face winding (non-contiguous face normals or holes in the mesh surface)

None of these apply to this report though (afaict), here is another testcase where a couple of different offsets are tested:
T65986_offset.blend
(still not sure if this is a precission issue alone? -- checking further...)

not a regression from 2.79 btw., same thing there...

We have two "competing" methods here: - `Origin to center of mass (volume) `was introduced in 37bc3850ce - it was soon found that there can be issues with this, so the `Origin to center of mass (surface)` was brought back 361c7cbbc5 - so in the end this might not be a bug, `Origin to center of mass (surface)` will always work fine here... [this is the suggested workaround for now...] Comments suggest the volume based method has following issues: > The new method while improved for solid objects doesn't work for non-manifold meshes, keep both > The resulting volume will only be correct if the mesh is manifold and has consistent face winding (non-contiguous face normals or holes in the mesh surface) None of these apply to this report though (afaict), here is another testcase where a couple of different offsets are tested: [T65986_offset.blend](https://archive.blender.org/developer/F7428259/T65986_offset.blend) (still not sure if this is a precission issue alone? -- checking further...) not a regression from 2.79 btw., same thing there...

Added subscriber: @mano-wii

Added subscriber: @mano-wii

It doesn't look like this will be resolved anytime soon.
So I'm marking it as Known Issue.
This limitation needs to be documented in the manual.

It doesn't look like this will be resolved anytime soon. So I'm marking it as `Known Issue`. This limitation needs to be documented in the manual.

This issue was referenced by 64bf179a17

This issue was referenced by 64bf179a17611747831ec8594c3e57216ef95f9c

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Campbell Barton self-assigned this 2020-06-18 14:39:54 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#65986
No description provided.