Fix T65986: Inaccurate center of mass, calculating mesh center

Use a median center of polygons as an initial value for volume center
calculation since the volume accumulation quickly generates very large
numbers that become inaccurate if the geometry is too far
from it's current center.